# nf-data-contributor

./: .gitignore  CLAUDE.md  README.md  SraRunTable.csv  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: manual_discovery.yml  nadia_study_review.md
.github/workflows/: daily_contributor.yml  manual_discovery.yml  nadia_dream.yml  nadia_polish.yml  nadia_review.yml  provision_study.yml
.nadia/skills/: annotation_patterns.yaml
config/: keywords.yaml  nf_keywords.yaml  settings.yaml
lib/: gap_report.py  requirements.txt  schema_properties.py  state_bootstrap.py  synapse_login.py
manuscript/: nadia_preprint_draft.md
prompts/: annotation_gap_fill.md  annotation_standards.md  daily_task_template.md  discovery_apis.md  repo_apis.md  synapse_workflow.md
scripts/: backfill_study_review_issues.py  fix_dataset_collection_issues.py  fix_dataset_names_issue10.py  github_issue.py  nadia_dream_prep.py  nadia_fix_prep.py  nadia_manual_discovery_prep.py  nadia_polish_prep.py  nadia_status.py  post_curation_comment.py  prepare_task.py  provision_approved_study.py
src/: main.py
src/deduplication/: checker.py
src/discovery/: arrayexpress.py  base.py  ega.py  figshare.py  metabolights.py  osf.py  pdc.py  pride.py  pubmed_geo.py  sra_dbgap.py  zenodo.py
src/notifications/: jira.py
src/relevance/: scorer.py
src/state/: tracker.py
src/synapse/: annotator.py  project_creator.py  templates.py
tests/: test_deduplication.py  test_discovery.py  test_gap_report.py  test_relevance.py  test_schema_properties.py  test_state_bootstrap.py
